# cmdbench-terminal

./: LICENSE  README.md  README.ru-RU.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docks/: _not-found.txt  en.html
docks/_not-found/: __next._index.txt
docks/features/: __next._tree.txt
docs/: 404.html  __next.__PAGE__.txt  __next._full.txt  __next._tree.txt  features.txt  index.html  index.txt
docs/404/: index.html
docs/_not-found/: __next._head.txt  __next._index.txt  __next._not-found.txt  __next._tree.txt  index.txt
docs/en/: __next.$d$locale.txt  __next._full.txt  __next._head.txt  __next._tree.txt  features.html  index.html  index.txt
docs/features/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.features.txt  index.html  index.txt
docs/ru/: __next.$d$locale.txt  __next._full.txt  __next._head.txt  __next._tree.txt  index.html  index.txt
landing/: __next.__PAGE__.txt  _not-found.html  features.html  index.html  index.txt  ru.html
landing/_not-found/: __next._head.txt
landing/en/: __next._full.txt  __next._tree.txt  features.txt
landing/ru/: __next._full.txt  __next._tree.txt  features.html  features.txt
scripts/: set-version.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: UnsavedChangesConfirmModal.tsx
src/hooks/: useCommandExecution.ts  useCommands.ts  useKeyboardShortcuts.ts  (+1 more)
(+99 files in other folders)
