[package]
name = "cmdbench-terminal"
version = "0.1.0-alpha.19"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
portable-pty = "0.8.1"
tokio = { version = "1", features = ["time", "sync"] }
time = "0.3.36"

[features]
custom-protocol = ["tauri/custom-protocol"]
